--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,21 @@
-﻿img {
+﻿/*Top Menu*/
+
+
+
+/*Gallery*/
+
+
+
+/*Body*/
+#body {
+    padding-top: 25px;
+    padding-bottom: 40px;
+}
+
+
+
+/*Images*/
+img {
     width: 300px;
     height: 400px;
     
@@ -8,6 +25,8 @@
     width: 100%;
     height: 100%;
 }
+
+
 
 /* header w/ background image */
 #bgh {
@@ -20,7 +39,7 @@ h1 {
 	color: black;
 	font-family: sans-serif;
     text-align: center;
-    font-size: 200%;
+    font-size: 3vw;
 }
 
 h2 {
@@ -44,6 +63,8 @@ p {
     color: white;
 }
 
+
+
 /* headers w/ background imgs */
 .bg-img-h {
     
@@ -54,8 +75,9 @@ p {
     background-repeat: no-repeat;
 }
 
-/* Formats how links look */
 
+
+/* Formats how links look */
 a:link {
     color: black;
     background-color: transparent;
@@ -78,4 +100,27 @@ a:active {
     color: darkred;
     background-color: transparent;
     text-decoration: underline;
+}
+
+
+
+/*Footer*/
+#footer {
+    background-color: #7f8c8d;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.footer {
+    color: white;
+    font-family: sans-serif;
+    font-size: 85%;
+}
+
+#copyright {
+    font-size: 75%;
+    padding-top: 40px;
+    background-color: inherit;
 }
